// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default container correctly 1`] = `
<div
  className="components-entity-details-container-m__container-default components-entity-details-container-m__container"
>
  <div
    id="child"
  />
</div>
`;

exports[`should render a narrow container correctly 1`] = `
<div
  className="components-entity-details-container-m__container-narrow components-entity-details-container-m__container"
>
  <div
    id="child"
  />
</div>
`;
